[package]
name = "smart-home"
version = "0.1.0"
authors = ["Honghao Li <hh.li99@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
config = "0.9"
rust-crypto = "^0.2"
hex = "0.4.2"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"